--- a/templates/registration/registration.html
+++ b/templates/registration/registration.html
@@ -15,35 +15,35 @@
                     <label for="first-name" data-error="wrong" data-success="right">First Name:</label>
                 </div>
                 <div class="col-s-8">
-                    <input type="text" id="first-name" name="FIRST_NAME" class="form-control" required>
+                    <input type="text" id="first-name" name="FIRST_NAME"  required>
                 </div>
 
                 <div class="col-s-4">
                     <label for="last-name" data-error="wrong" data-success="right">Last Name:</label>
                 </div>
                 <div class="col-s-8">
-                    <input type="last-name" id="last-name" name="LAST_NAME" class="form-control" required>
+                    <input type="last-name" id="last-name" name="LAST_NAME" required>
                 </div>
 
                 <div class="col-s-4">
                     <label for="email" data-error="wrong" data-success="right">Email:</label>
                 </div>
                 <div class="col-s-8">
-                    <input type="email" id="email" name="EMAIL" class="form-control" required>
+                    <input type="email" id="email" name="EMAIL" required>
                 </div>
 
                 <div class="col-s-4">
                     <label for="email" data-error="wrong" data-success="right">Password:</label>
                 </div>
                 <div class="col-s-8">
-                    <input type="password" id="password" name="PASSWORD" class="form-control" minlength="6" maxlength="25" required>
+                    <input type="password" id="password" name="PASSWORD" required>
                 </div>
 
                 <div class="col-s-4">
                     <label for="email" data-error="wrong" data-success="right">Confirm Password:</label>
                 </div>
                 <div class="col-s-8">
-                    <input type="password" id="confirm-password" name="CONFIRM_PASSWORD" class="form-control" minlength="6" maxlength="25" required>
+                    <input type="password" id="confirm-password" name="CONFIRM_PASSWORD" required>
                 </div>
                 <br>
                 <input type="submit" class="btn">
