Added frontend functionality and changed minor backend details.

--- a/templates/registration/registration.html
+++ b/templates/registration/registration.html
@@ -33,14 +33,14 @@
                 </div>
 
                 <div class="col-s-4">
-                    <label for="email" data-error="wrong" data-success="right">Password:</label>
+                    <label for="password" data-error="wrong" data-success="right">Password:</label>
                 </div>
                 <div class="col-s-8">
                     <input type="password" id="password" name="PASSWORD" required>
                 </div>
 
                 <div class="col-s-4">
-                    <label for="email" data-error="wrong" data-success="right">Confirm Password:</label>
+                    <label for="confirm-password" data-error="wrong" data-success="right">Confirm Password:</label>
                 </div>
                 <div class="col-s-8">
                     <input type="password" id="confirm-password" name="CONFIRM_PASSWORD" required>
