--- a/ChatBot/static/ChatBot/css/main.css
+++ b/ChatBot/static/ChatBot/css/main.css
@@ -6,7 +6,7 @@ UTSA-Orange: #f47321
 */
 
 body {
-	background-color: #FEFEFE;
+	background-color: #FAFAFA;
 }
 
 header {
@@ -75,4 +75,13 @@ input[type=text]:active, input[type=password]:active, textarea:active, select:ac
 	outline-width: 2px;
 	outline-color: #002244;
 	box-shadow: 0px 0px 0px 2px #002244;
+}
+
+#registrationForm .row {
+	background-color: inherit;
+	padding: 10px 0px;
+}
+
+#registrationForm .row div input[type="text"], #registrationForm .row div input[type="password"], textarea {
+	width: 100%;
 }
