--- a/templates/registration/registration.html
+++ b/templates/registration/registration.html
@@ -5,60 +5,79 @@
 
 {% block content %}
   <div class="container">
-    <div class="row">
-        <div id="registration-div" class="col-s-6">
-            <h2>Register</h2>
-            <form id="registrationForm" class="fv-form fv-form-bootstrap" action="{% url 'registration' %}" method="post">
-                {% csrf_token %}
+	<div class="row">
+		<div class="col-sm-3 hidden-xs spacer">
+		</div>
+		<div id="registration-div" class="col-sm-6 col-xs-12">
+			<h2>
+				Register
+			</h2>
+			<form id="registrationForm" class="fv-form fv-form-bootstrap" action="{% url 'registration' %}" method="post">
+				{% csrf_token %}
+				<div class="row">
+					<div class="col-sm-6">
+						<label for="first-name" data-error="wrong" data-success="right">First Name:</label>
+					</div>
+					<div class="col-sm-6">
+						<label for="last-name" data-error="wrong" data-success="right">Last Name:</label>
+					</div>
+					<div class="col-sm-6">
+						<input type="text" id="first-name" name="FIRST_NAME" placeholder="First Name" required>
+					</div>
+					<div class="col-sm-6">
+						<input type="text" id="last-name" name="LAST_NAME" placeholder="Last Name" required>
+					</div>
+				</div>
 
-                <div class="col-s-4">
-                    <label for="first-name" data-error="wrong" data-success="right">First Name:</label>
-                </div>
-                <div class="col-s-8">
-                    <input type="text" id="first-name" name="FIRST_NAME"  required>
-                </div>
+				<div class="row">
+					<div class="col-sm-12">
+						<label for="email" data-error="wrong" data-success="right">Email:</label>
+					</div>
+					<div class="col-sm-12">
+						<input type="text" id="email" name="EMAIL" placeholder="Email" required>
+					</div>
+				</div>
 
-                <div class="col-s-4">
-                    <label for="last-name" data-error="wrong" data-success="right">Last Name:</label>
-                </div>
-                <div class="col-s-8">
-                    <input type="last-name" id="last-name" name="LAST_NAME" required>
-                </div>
+				<div class="row">
+					<div class="col-sm-6">
+						<label for="password" data-error="wrong" data-success="right">Password:</label>
+					</div>
+					<div class="col-sm-6">
+						<label for="confirm-password" data-error="wrong" data-success="right">Confirm Password:</label>
+					</div>
+					<div class="col-sm-6">
+						<input type="password" id="password" name="PASSWORD" placeholder="Password" required>
+					</div>
+					<div class="col-sm-6">
+						<input type="password" id="confirm-password" name="CONFIRM_PASSWORD" placeholder="Confirm Password" required>
+					</div>
+				</div>
 
-                <div class="col-s-4">
-                    <label for="email" data-error="wrong" data-success="right">Email:</label>
-                </div>
-                <div class="col-s-8">
-                    <input type="email" id="email" name="EMAIL" required>
-                </div>
-
-                <div class="col-s-4">
-                    <label for="password" data-error="wrong" data-success="right">Password:</label>
-                </div>
-                <div class="col-s-8">
-                    <input type="password" id="password" name="PASSWORD" required>
-                </div>
-
-                <div class="col-s-4">
-                    <label for="confirm-password" data-error="wrong" data-success="right">Confirm Password:</label>
-                </div>
-                <div class="col-s-8">
-                    <input type="password" id="confirm-password" name="CONFIRM_PASSWORD" required>
-                </div>
-                <br>
-                <input type="submit" class="btn">
-                <p id="errmsg"></p>
-            </form>
-        </div>
-        <div id="success-div" class="col-s-6">
-            <h2>Your account has been created</h2>
-        </div>
-    </div>
+				<div class="row">
+					<div class="col-sm-12">
+						<input type="submit" class="btn">
+					</div>
+				</div>
+				
+				<br />
+				<p id="errmsg"></p>
+			</form>
+		</div>
+		<div class="col-sm-3 hidden-xs spacer">
+		</div>
+		<div class="col-sm-3 hidden-xs spacer">
+		</div>
+		<div id="success-div" class="col-sm-6 col-xs-12">
+			<h2>Your account has been created</h2>
+		</div>
+		<div class="col-sm-3 hidden-xs spacer">
+		</div>
+	</div>
   </div>
 
 
 {% endblock %}
 
 {% block javascript %}
-    <script type="text/javascript" src={% static 'ChatBot/js/registration/registration.js' %}></script>
+	<script type="text/javascript" src={% static 'ChatBot/js/registration/registration.js' %}></script>
 {% endblock %}
