--- a/templates/registration/registration.html
+++ b/templates/registration/registration.html
@@ -6,25 +6,28 @@
 {% block content %}
   <div class="container">
 	<div class="row">
-		<div class="col-sm-3 hidden-xs spacer">
+		<div class="col-sm-1 col-md-2 col-lg-3 hidden-xs-down spacer">
 		</div>
-		<div id="registration-div" class="col-sm-6 col-xs-12">
+		<div id="registration-div" class="col-sm-10 col-md-8 col-lg-6 col-xs-12">
 			<h2>
 				Register
 			</h2>
 			<form id="registrationForm" class="fv-form fv-form-bootstrap" action="{% url 'registration' %}" method="post">
 				{% csrf_token %}
 				<div class="row">
-					<div class="col-sm-6">
+					<div class="col-xs-12 col-sm-6">
 						<label for="first-name" data-error="wrong" data-success="right">First Name:</label>
 					</div>
-					<div class="col-sm-6">
+					<div class="hidden-xs-down col-sm-6" style="display:block;width:100%;">
 						<label for="last-name" data-error="wrong" data-success="right">Last Name:</label>
 					</div>
-					<div class="col-sm-6">
+					<div class="col-xs-12 col-sm-6">
 						<input type="text" id="first-name" name="FIRST_NAME" placeholder="First Name" required>
 					</div>
-					<div class="col-sm-6">
+					<div class="col-xs-12 hidden-sm-up" style="display:block;width:100%;">
+						<label for="last-name" data-error="wrong" data-success="right">Last Name:</label>
+					</div>
+					<div class="col-xs-12 col-sm-6">
 						<input type="text" id="last-name" name="LAST_NAME" placeholder="Last Name" required>
 					</div>
 				</div>
@@ -39,16 +42,19 @@
 				</div>
 
 				<div class="row">
-					<div class="col-sm-6">
+					<div class="col-xs-12 col-sm-6">
 						<label for="password" data-error="wrong" data-success="right">Password:</label>
 					</div>
-					<div class="col-sm-6">
+					<div class="hidden-xs-down col-sm-6" style="display:block;width:100%;">
 						<label for="confirm-password" data-error="wrong" data-success="right">Confirm Password:</label>
 					</div>
-					<div class="col-sm-6">
+					<div class="col-xs-12 col-sm-6">
 						<input type="password" id="password" name="PASSWORD" placeholder="Password" required>
 					</div>
-					<div class="col-sm-6">
+					<div class="col-xs-12 hidden-sm-up" style="display:block;width:100%;">
+						<label for="confirm-password" data-error="wrong" data-success="right">Confirm Password:</label>
+					</div>
+					<div class="col-xs-12 col-sm-6">
 						<input type="password" id="confirm-password" name="CONFIRM_PASSWORD" placeholder="Confirm Password" required>
 					</div>
 				</div>
@@ -63,14 +69,14 @@
 				<p id="errmsg"></p>
 			</form>
 		</div>
-		<div class="col-sm-3 hidden-xs spacer">
+		<div class="col-sm-1 col-md-2 col-lg-3 hidden-xs-down spacer">
 		</div>
-		<div class="col-sm-3 hidden-xs spacer">
+		<div class="col-sm-1 col-md-2 col-lg-3 hidden-xs-down spacer">
 		</div>
 		<div id="success-div" class="col-sm-6 col-xs-12">
 			<h2>Your account has been created</h2>
 		</div>
-		<div class="col-sm-3 hidden-xs spacer">
+		<div class="col-sm-1 col-md-2 col-lg-3 hidden-xs-down spacer">
 		</div>
 	</div>
   </div>
