Secured PW Reset
Changed input type to password

--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -1,15 +1,17 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Reset</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}" />
 </head>
 <body>
     <form method="post" action="/reset">
         {% csrf_token %}
-        New Password: <input name="PASSWORD">
+        New Password: <input type="password" name="PASSWORD">
         <br>
-        Confirm Password: <input name="CONFIRM_PASSWORD">
+        Confirm Password: <input type="password" name="CONFIRM_PASSWORD">
         <input type="submit">
     </form>
 </body>
