Updated PW Reset
Now matches other pages

--- a/ChatBot/static/ChatBot/css/main.css
+++ b/ChatBot/static/ChatBot/css/main.css
@@ -78,7 +78,7 @@ input[type=text]:active, input[type=password]:active, textarea:active, select:ac
 	border-color: #ffffff;
 }
 
-#registrationForm .row {
+#registrationForm .row, #passwordReset .row {
 	background-color: inherit;
 	padding: 10px 0px;
 }
