--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -1,18 +1,46 @@
+{% extends 'main_template.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Reset</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}" />
-</head>
-<body>
-    <form method="post" action="/reset">
-        {% csrf_token %}
-        New Password: <input type="password" name="PASSWORD">
-        <br>
-        Confirm Password: <input type="password" name="CONFIRM_PASSWORD">
-        <input type="submit">
-    </form>
-</body>
-</html>
+{% block title %}Reset{% endblock %}
+
+{% block content %}
+<div class="container">
+	<div class="row">
+		<div class="col-sm-1 col-md-2 col-lg-3 hidden-xs-down spacer">
+		</div>
+		<div class="col-sm-10 col-md-8 col-lg-6 col-xs-12">
+			<h2>
+				Reset Password
+			</h2>
+			<hr />
+		    <form id="passwordReset" method="post" action="/reset">
+		        {% csrf_token %}
+				<div class="row">
+					<div class="col-sm-12">
+						<label for="password" data-error="wrong" data-success="right">New Password:</label>
+					</div>
+					<div class="col-sm-12">
+						<input type="password" name="PASSWORD" placeholder="Password">
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-12">
+						<label for="confirm_password" data-error="wrong" data-success="right">Confirm Password:</label>
+					</div>
+					<div class="col-sm-12">
+						<input type="password" name="CONFIRM_PASSWORD" placeholder="Confirm Password">
+					</div>
+				</div>
+				<br />
+				<div class="row">
+					<div class="col-sm-12">
+				        <input type="submit" value="Save" />
+				    </div>
+			    </div>
+		    </form>
+		</div>
+		<div class="col-sm-1 col-md-2 col-lg-3 hidden-xs-down spacer">
+		</div>
+    </div>
+</div>
+    
+{% endblock %}
