--- a/templates/main_template.html
+++ b/templates/main_template.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8">
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}" />
+        <link rel="stylesheet" type="text/css" href="{% static 'ChatBot/css/main.css' %}" />
 
         <title>{% block title %}{% endblock %}</title>
 
