--- a/templates/chat/chat.html
+++ b/templates/chat/chat.html
@@ -4,50 +4,49 @@
 {% block title %}ChatBot Web Interface{% endblock %}
 
 {% block content %}
-  <div class="container" style="width:400px; border: 1px solid black;">
-    <div class="row" style="border: 1px solid black;">
-        <div id="history-window" class="col-s-12">
-            <div id="history" style="display: block;height: 300px;">
-                You: Question?<br>
-                > Response<br>
-            </div>
-        </div>
-
-    </div>
-  <div class="row" style="border: 1px solid black;">
-      <form id="query">
-          {% csrf_token %}
-      <div id="user-entry" class="col-s-8" style="width:80%">
-            <input type="text" id="question" name="QUESTION_TEXT" style="width: 100%">
-        </div>
-      <div id="submit-div" class="col-s-4" style="width: 20%">
-          <input type="button" value="submit" onclick="SendQuestion()">
-      </div>
-      </form>
-  </div>
-  </div>
+	<div class="container" style="width:400px; border: 1px solid black;">
+		<div class="row" style="border: 1px solid black;">
+			<div id="history-window" class="col-sm-12">
+				<div id="history" style="display: block;height: 300px;">
+					You: Question?<br>
+					> Response<br>
+				</div>
+			</div>
+		</div>
+		<div class="row" style="border: 1px solid black;">
+			<form id="query">
+				{% csrf_token %}
+				<div id="user-entry" class="col-sm-8" style="width:80%">
+					<input type="text" id="question" name="QUESTION_TEXT" style="width: 100%">
+				</div>
+				<div id="submit-div" class="col-sm-4" style="width: 20%">
+					<input type="button" value="submit" onclick="SendQuestion()">
+				</div>
+			</form>
+		</div>
+	</div>
 
 {% endblock %}
 
 {% block javascript %}
-    <script>
-    function SendQuestion() {
-        var q = $("#query").serialize();
-        $.ajax({
-            url: "/chatbot",
-            type: "POST",
-            data: q,
-            success: function(data) {
-                console.log(data);
-                var str = "You: " + q + "<br>";
-                $("#history").html($("#history").html() + str + "> " + data["MESSAGE"] + "<br>");
-            },
-            error: function(data) {
-                console.log(data);
-                var str = "You: " + q + "<br>";
-                $("#history").html($("#history").html() + str + "> " + data["MESSAGE"] + "<br>");
-            }
-        });
-    }
-    </script>
+	<script>
+	function SendQuestion() {
+		var q = $("#query").serialize();
+		$.ajax({
+			url: "/chatbot",
+			type: "POST",
+			data: q,
+			success: function(data) {
+				console.log(data);
+				var str = "You: " + q + "<br>";
+				$("#history").html($("#history").html() + str + "> " + data["MESSAGE"] + "<br>");
+			},
+			error: function(data) {
+				console.log(data);
+				var str = "You: " + q + "<br>";
+				$("#history").html($("#history").html() + str + "> " + data["MESSAGE"] + "<br>");
+			}
+		});
+	}
+	</script>
 {% endblock %}
