--- a/templates/chat/chat.html
+++ b/templates/chat/chat.html
@@ -4,25 +4,31 @@
 {% block title %}ChatBot Web Interface{% endblock %}
 
 {% block content %}
-	<div class="container" style="width:400px; border: 1px solid black;">
-		<div class="row" style="border: 1px solid black;">
-			<div id="history-window" class="col-sm-12">
-				<div id="history" style="display: block;height: 300px;">
-					You: Question?<br>
-					> Response<br>
+	<div class="container">
+		<div class="row">
+	        <div class="col-sm-1 col-md-2 col-lg-3 hidden-xs-down spacer">
+	        </div>
+	        <div id="chatbot-container" class="col-sm-10 col-md-8 col-lg-6 col-xs-12" style="border-style:solid;border-color:black;border-width:1px;background-color:#ffffff;">
+	        	<div class="row">
+					<div id="history-window" class="col-sm-12">
+						<div id="history" style="display: block;height: 300px;background-color:#ffffff;">
+						</div>
+					</div>
 				</div>
+				<form id="query">
+					<div class="row" style="padding:10px;background-color:#cdcdcd;">
+						{% csrf_token %}
+						<div id="user-entry" class="col-sm-9">
+							<input type="text" id="question" name="QUESTION_TEXT" style="width:100%;height:44px;">
+						</div>
+						<div id="submit-div" class="col-sm-3" style="text-align:center;">
+							<input type="button" value="submit" onclick="SendQuestion()" style="outline-style:none;">
+						</div>
+					</div>
+				</form>
 			</div>
-		</div>
-		<div class="row" style="border: 1px solid black;">
-			<form id="query">
-				{% csrf_token %}
-				<div id="user-entry" class="col-sm-8" style="width:80%">
-					<input type="text" id="question" name="QUESTION_TEXT" style="width: 100%">
-				</div>
-				<div id="submit-div" class="col-sm-4" style="width: 20%">
-					<input type="button" value="submit" onclick="SendQuestion()">
-				</div>
-			</form>
+	        <div class="col-sm-1 col-md-2 col-lg-3 hidden-xs-down spacer">
+	        </div>
 		</div>
 	</div>
 
@@ -39,12 +45,12 @@
 			success: function(data) {
 				console.log(data);
 				var str = "You: " + q + "<br>";
-				$("#history").html($("#history").html() + str + "> " + data["MESSAGE"] + "<br>");
+				$("#history").html($("#history").html() + str + "OIT: " + data["MESSAGE"] + "<br>");
 			},
 			error: function(data) {
 				console.log(data);
 				var str = "You: " + q + "<br>";
-				$("#history").html($("#history").html() + str + "> " + data["MESSAGE"] + "<br>");
+				$("#history").html($("#history").html() + str + "OIT: " + data["MESSAGE"] + "<br>");
 			}
 		});
 	}
