--- a/templates/chat/chat.html
+++ b/templates/chat/chat.html
@@ -19,7 +19,7 @@
 					{% csrf_token %}
 					<div class="row" style="padding:10px;background-color:#cdcdcd;">
 						<div id="user-entry" class="col-sm-9">
-							<input type="text" id="question" name="QUESTION_TEXT" style="width:100%;height:44px;">
+							<input type="text" id="question" name="QUESTION_TEXT" style="width:100%;height:44px;" placeholder="How can I help?">
 						</div>
 						<div id="submit-div" class="col-sm-3" style="text-align:center;">
 							<input type="button" value="submit" onclick="SendQuestion()" style="outline-style:none;">
