--- a/templates/delete/delete_user.html
+++ b/templates/delete/delete_user.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Delete Logged in User</title>
-</head>
-<body>
+{% extends 'main_template.html' %}
 
-</body>
-</html>
+{% block content %}
+
+<div class='col-sm-6 col-sm-offset-3'>
+
+    {% if request.user.is_authenticated %}
+    <p>Are you sure you want to delete this user?</p>
+    {{ request.user.username }}
+    <form action="" method="POST">
+        {% csrf_token %}
+        <input type="submit" value="Delete"/>
+        <input type="button" value="Cancel" onclick="window.location='{% url 'chatbot_handler' %}'"/>
+    </form>
+    {% else %}
+    <h4>You do not have the correct authorizations to delete this user</h4>.</h4>
+    <a href="/login">Login</a>
+    {% endif %}
+</div>
+{% endblock %}
