--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -21,7 +21,7 @@
                     </label>
                 </div>
                 <div class="col-sm-8">
-                    <input id="email" name="EMAIL">
+                    <input type="text" id="email" name="EMAIL">
                 </div>
                 <br>
                 <div class="col-sm-4">
@@ -30,7 +30,7 @@
                     </label>
                 </div>
                 <div class="col-sm-8">
-                    <input id="password" name="PASSWORD">
+                    <input type="password" id="password" name="PASSWORD">
                 </div>
                 <br>
                 <input type="submit">
