--- a/templates/chat/chat.html
+++ b/templates/chat/chat.html
@@ -31,7 +31,7 @@
         </div>
         <!--Hey are you sure you want to delete {{ object.title }}?-->
         <button type="button">
-            <a href="/delete_user_handler">Delete</a>
+            <a href="/delete">Delete</a>
         </button>
         <!-- onclick="changePW(false)">Delete User</> -->
         <div class="col-sm-1 col-md-2 col-lg-3 hidden-xs-down spacer">
