--- a/templates/chat/chat.html
+++ b/templates/chat/chat.html
@@ -43,26 +43,30 @@
 
 {% block javascript %}
 <script type="text/javascript">
-	function SendQuestion() {
-		var q = $("#query").serialize();
-		question = $("#question").val();
-		console.log("question = " + question);
-		$.ajax({
-			url: "/chatbot",
-			type: "POST",
-			data: q,
-			success: function(data) {
-				console.log(data);
-				var str = "You: " + $("<div></div>").text(question).html() + "<br>";
-				$("#history").append(str + "OIT: " + data["MESSAGE"] + "<br>");
-			},
-			error: function(data) {
-				console.log(data);
-				var str = "You: " + $("<div></div>").text(question).html() + "<br>";
-				$("#history").append(str + "OIT: " + data["MESSAGE"] + "<br>");
-			}
-		});
-	}
+    //encodes String for use in HTML
+    String.prototype.htmlEncode = function(){
+        return $("<div></div>").text(this).html();
+    }
+    function SendQuestion() {
+        var q = $("#query").serialize();
+        question = $("#question").val();
+        console.log("question = " + question);
+        $.ajax({
+            url: "/chatbot",
+            type: "POST",
+            data: q,
+            success: function(data) {
+                console.log(data);
+                var str = "You: " + question.htmlEncode() + "<br>";
+                $("#history").append(str + "OIT: " + data["MESSAGE"] + "<br>");
+            },
+            error: function(data) {
+                console.log(data);
+                var str = "You: " + question.htmlEncode() + "<br>";
+                $("#history").append(str + "OIT: " + data["MESSAGE"] + "<br>");
+            }
+        });
+    }
 
 
 </script>
