--- a/ChatBot/static/ChatBot/css/main.css
+++ b/ChatBot/static/ChatBot/css/main.css
@@ -53,6 +53,12 @@ button, input[type=button], input[type=submit] {
 	cursor: pointer;
 }
 
+.button-shape {
+    display: none;
+    padding: 10px;
+    border-radius: 2px;
+}
+
 button:hover, input[type=button]:hover, input[type=submit]:hover, button:active, input[type=button]:active, input[type=submit]:active {
 	top: -3px;
 	box-shadow: 0px 3px 10px -3px #000000;
