--- a/ChatBot/static/ChatBot/css/main.css
+++ b/ChatBot/static/ChatBot/css/main.css
@@ -54,16 +54,16 @@ button, input[type=button], input[type=submit] {
 }
 
 .button-shape {
-    display: none;
     padding: 10px;
     border-radius: 2px;
 }
 
-button:hover, input[type=button]:hover, input[type=submit]:hover, button:active, input[type=button]:active, input[type=submit]:active {
+button:hover, input[type=button]:hover, input[type=submit]:hover, button:active, input[type=button]:active, input[type=submit]:active, button:focus, input[type=button]:focus, input[type=submit]:focus {
 	top: -3px;
 	box-shadow: 0px 3px 10px -3px #000000;
 	background-color: #f47321;
 	color: #ffffff;
+	outline-style: none;
 }
 
 input[type=text], input[type=password], textarea, select {
