--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -8,11 +8,13 @@
     </style>
     <div class="container">
     <div class="row">
-        <div id="login-div" class="col-sm-8 spaced">
+        <div class="col-md-1 col-lg-2 hidden-sm-down spacer">
+        </div>
+        <div id="login-div" class="col-sm-12 col-md-10 col-lg-8 col-xs-12">
             <h3>
                 Login
             </h3>
-            <hr>
+            <hr />
             <form id="login-form" method="post" class="form fv-form fv-form-bootstrap" action="/login">
                 {% csrf_token %}
                 <div class="col-sm-4">
@@ -35,38 +37,28 @@
                 <br>
                 <div class="col-sm-12">
                     <input type="submit">
-                    <div id="login-message-container" style="margin-left:10px;" class="button-shape">
+                    <div id="login-message-container" style="margin-left:10px;display:none;" class="button-shape">
                     </div>
                 </div>
             </form>
-            <br>
-            <a href="/registration">Create new account</a>
-            <br>
-            <a href="#" onclick="changePW(false)">Forgot Password</a>
+            <br />
+            <div class="row">
+                <div class="col-sm-12">
+                    <a href="/registration">Create new account</a>
+                    <br>
+                    <a href="/forgot">Forgot Password</a>
+                </div>
             </div>
-    
-            <div id="change-div" class="col-sm-8 spaced">
-                <h3>
-                    Change Password
-                </h3>
-                <hr>
-                <form method="post" action="/requestchange">
-                {% csrf_token %}
-                    <div class="col-sm-4"><label for="email-change">Email:</label></div>
-                    <div class="col-sm-8"><input id="email-change" name="EMAIL"></div>
-                    <input type="hidden" name="CHANGE_TYPE" value="PASSWORD"><br>
-                    <input type="submit">
-                </form>
-                <br>
-                <a href="#" onclick="changePW(true)">Show Login</a>
-                <br>
-
             </div>
-
-
+        </div>
+        <div class="col-md-1 col-lg-2 hidden-sm-down spacer">
         </div>
     </div>
     <script type="text/javascript">
+        //encodes String for use in HTML
+        String.prototype.htmlEncode = function(){
+            return $("<div></div>").text(this).html();
+        }
         $(document).ready(function(){
             $("#login-form").submit(function(e){
                 e.preventDefault();
@@ -108,23 +100,7 @@
                     }
                 });
             });
-            
-            $("#passwordResetSubmit").on("click", function(e){
-                window.setTimeout(function(e){
-                    submitPasswordReset(e);
-                }, 0);
-            });
         });
-        function changePW(vis) {
-            if(vis) {
-                document.getElementById("change-div").setAttribute("style", "display: none;");
-                document.getElementById("login-div").setAttribute("style", "display: initial;");
-            } else {
-                document.getElementById("change-div").setAttribute("style", "display: initial;");
-                document.getElementById("login-div").setAttribute("style", "display: none;");
-            }
-        }
-        changePW(true);
     </script>
 
 {% endblock %}
