--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -4,43 +4,152 @@
 
 {% block content %}
 <div class="container">
-	<div class="row">
-		<div class="col-sm-1 col-md-2 col-lg-3 hidden-xs-down spacer">
-		</div>
-		<div class="col-sm-10 col-md-8 col-lg-6 col-xs-12">
-			<h2>
-				Reset Password
-			</h2>
-			<hr />
-		    <form id="passwordReset" method="post" action="/reset">
-		        {% csrf_token %}
-				<div class="row">
-					<div class="col-sm-12">
-						<label for="password" data-error="wrong" data-success="right">New Password:</label>
-					</div>
-					<div class="col-sm-12">
-						<input type="password" name="PASSWORD" placeholder="Password">
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-12">
-						<label for="confirm_password" data-error="wrong" data-success="right">Confirm Password:</label>
-					</div>
-					<div class="col-sm-12">
-						<input type="password" name="CONFIRM_PASSWORD" placeholder="Confirm Password">
-					</div>
-				</div>
-				<br />
-				<div class="row">
-					<div class="col-sm-12">
-				        <input type="submit" value="Save" />
-				    </div>
-			    </div>
-		    </form>
-		</div>
-		<div class="col-sm-1 col-md-2 col-lg-3 hidden-xs-down spacer">
-		</div>
+    <div class="row">
+        <div class="col-sm-1 col-md-2 col-lg-3 hidden-xs-down spacer">
+        </div>
+        <div class="col-sm-10 col-md-8 col-lg-6 col-xs-12">
+            <h2>
+                Reset Password
+            </h2>
+            <hr />
+            <form id="passwordReset" method="post" action="/reset">
+                {% csrf_token %}
+                <div class="row">
+                    <div class="col-sm-12">
+                        <label for="password" data-error="wrong" data-success="right">New Password:</label>
+                    </div>
+                    <div class="col-sm-12">
+                        <input type="password" id="password" name="PASSWORD" placeholder="Password">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <label for="confirm_password" data-error="wrong" data-success="right">Confirm Password:</label>
+                    </div>
+                    <div class="col-sm-12">
+                        <input type="password" id="confirm_password" name="CONFIRM_PASSWORD" placeholder="Confirm Password">
+                    </div>
+                </div>
+                <br />
+                <div class="row">
+                    <div class="col-sm-12">
+                        <input type="submit" id="passwordResetSubmit" value="Save" />
+                        <div id="reset-message-container" style="margin-left:10px;" class="button-shape">
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="col-sm-1 col-md-2 col-lg-3 hidden-xs-down spacer">
+        </div>
     </div>
 </div>
     
+{% endblock %}
+
+{% block javascript %}
+<script type="text/javascript">
+    $(document).ready(function(){
+        var isReset = false;
+        function deactivateSubmitButton(){
+            $("#passwordResetSubmit").css("background-color", "#666666");
+            $("#passwordResetSubmit").css("color", "#ffffff");
+            $("#passwordResetSubmit").css("top", "0px");
+            $("#passwordResetSubmit").css("box-shadow", "0px 0px 0px 0px #000000");
+            $("#passwordResetSubmit").css("cursor", "default");
+            $("#passwordResetSubmit").hover(function(){
+                $("#passwordResetSubmit").css("background-color", "#666666");
+                $("#passwordResetSubmit").css("color", "#ffffff");
+                $("#passwordResetSubmit").css("top", "0px");
+                $("#passwordResetSubmit").css("box-shadow", "0px 0px 0px 0px #000000");
+                $("#passwordResetSubmit").css("cursor", "default");
+            });
+        }
+        $("#passwordReset").submit(function(e){
+            e.preventDefault();
+            if(!isReset){
+                var pw1 = $("#password").val();
+                var pw2 = $("#confirm_password").val();
+                if(pw1 == pw2){
+                    $.ajax({
+                        url: "/reset",
+                        cache: false,
+                        method: "post",
+                        data: {
+                            csrfmiddlewaretoken: $("#passwordReset input[name=\"csrfmiddlewaretoken\"]").first().val(),
+                            PASSWORD: pw1,
+                            CONFIRM_PASSWORD: pw2
+                        },
+                        success: function(response){
+                            if(response.ERROR == false){
+                                //successful reset
+                                isReset = true;
+                                deactivateSubmitButton();
+                                $("#reset-message-container").addClass("alert-success");
+                                $("#reset-message-container").html("Succes: you may log in <a href=\"/login\">here</a>");
+                                $("#reset-message-container").css("display", "inline-block");
+                                
+                            }
+                            else if(response.ERROR == true){
+                                //failed reset
+                                $("#reset-message-container").addClass("alert-danger");
+                                $("#reset-message-container").text("Error: " + response.MESSAGE);
+                                $("#reset-message-container").css("display", "inline-block");
+                            } 
+                            else{
+                                //response.ERROR undefined, error on server implied
+                                $("#reset-message-container").addClass("alert-danger");
+                                $("#reset-message-container").text("Error: unknown server error");
+                                $("#reset-message-container").css("display", "inline-block");
+                            }
+                        },
+                        error: function(jqXHR, response){
+                            //server error
+                            $("#reset-message-container").addClass("alert-danger");
+                            $("#reset-message-container").text("Error: server error (" + jqXHR + ")");
+                            $("#reset-message-container").css("display", "inline-block");
+                        }
+                    });
+                }
+                else{
+                    $("#reset-message-container").addClass("alert-danger");
+                    $("#reset-message-container").text("Error: passwords do not match");
+                    $("#reset-message-container").css("display", "inline-block");
+                }
+            }
+        });
+        function submitPasswordReset(e){
+            //e.preventDefault();
+            var pw1 = $("#password").val();
+            var pw2 = $("#confirm_password").val();
+            if(pw1 == pw2){
+                var token = $("input[name=\"csrfmiddlewaretoken\"]").first().val();
+                $.ajax({
+                    url: "/reset",
+                    cache: false,
+                    method: "post",
+                    data: {
+                        csrfmiddlewaretoken: token,
+                        PASSWORD: pw1,
+                        CONFIRM_PASSWORD: pw2
+                    },
+                    success: function(data){
+                        response = JSON.parse(data);
+                        alert(response.MESSAGE);
+                    }
+                });
+            }
+            else{
+                alert("Passwords do not match: "+pw1+" "+pw2);
+            }
+            return false;
+        }
+        
+        $("#passwordResetSubmit").on("click", function(e){
+            window.setTimeout(function(e){
+                submitPasswordReset(e);
+            }, 0);
+        });
+    });
+</script>
 {% endblock %}
