--- a/ChatBot/static/ChatBot/css/main.css
+++ b/ChatBot/static/ChatBot/css/main.css
@@ -33,7 +33,7 @@ main {
 	}
 }
 
-button, input, select, textarea {
+button, input, select, textarea, .transition {
 	-webkit-transition: all .2s ease;
 	-moz-transition: all .2s ease;
 	-o-transition: all .2s ease;
@@ -94,4 +94,45 @@ input[type=text]:active, input[type=password]:active, textarea:active, select:ac
 
 #registrationForm .row div input[type="text"], #registrationForm .row div input[type="password"], textarea {
 	width: 100%;
+}
+
+#settings-button {
+    border-radius: 100px;
+    padding: 5px;
+    background-color: #002244;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    box-shadow: 0px 2px 6px -4px #000000;
+    cursor: default;
+}
+
+#settings-button:hover {
+    -ms-transform: rotate(-90deg); /* IE 9 */
+    -webkit-transform: rotate(-90deg); /* Chrome, Safari, Opera */
+    transform: rotate(-90deg);
+    /* logical-box-shadow: 0px 5px 10px -5px #000000; */
+    box-shadow: -5px 0px 10px -5px #000000; /* Shifted to account for rotation */
+    cursor: pointer;
+}
+
+#settings-pane {
+    box-shadow: 0px 5px 10px -5px #000000;
+    overflow: hidden;
+}
+
+.settings-pane-item {
+    margin: 0px -27px;
+    padding: 10px 27px;
+    border-style: solid none none none;
+    border-color: #ffffff;
+    border-width: 1px;
+    color: #ffffff;
+    text-decoration: none;
+    cursor: pointer;
+    background-color: inherit;
+}
+
+.settings-pane-item:hover, .settings-pane-item:active {
+    background-color: #004488;
 }
