Fixing Update Profile

--- a/templates/edit/edit_user.html
+++ b/templates/edit/edit_user.html
@@ -64,7 +64,7 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <input type="submit" class="btn" value="Save" />
-                        <div id="edit-user-message-container" style="display:none;" class="button-size">
+                        <div id="edit-user-message-container" style="display:none;" class="button-shape">
                             <h2>Your changes have been saved</h2>
                         </div>
                     </div>
