--- a/templates/main_template.html
+++ b/templates/main_template.html
@@ -23,7 +23,9 @@
 
     <body>
         <header id="main-header">
-            ChatBot
+            <a href="/chatbot" style="text-decoration:none;color:inherit;">
+                ChatBot
+            </a>
         </header>
         <main>
             {% block content %}
