--- a/templates/update/update_profile.html
+++ b/templates/update/update_profile.html
@@ -82,6 +82,9 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <input type="submit" class="btn" value="Save" />
+                        <a href="/chatbot" style="text-decoration:none;">
+                            <input type="button" class="btn" value="Cancel" style="margin-left:10px;" />
+                        </a>
                         <div id="edit-user-message-container" style="display:none;margin-left:10px;" class="button-shape">
                             Your changes have been saved
                         </div>
