--- a/templates/change_password/change_password.html
+++ b/templates/change_password/change_password.html
@@ -9,7 +9,7 @@
                 {% if messages %}
                 {% for message in messages %}
                 <p class="alert alert-dismissable {% if message.tags %}alert-{{ message.tags }}" {% endif %}>
-                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true" onmouseover="this.style.top='0px';this.style.backgroundColor='inherit';this.style.boxShadow='0px 0px 0px #000000';">&times;</button>
                     {{ message }}
                 </p>
                 {% endfor %}
@@ -36,7 +36,7 @@
                     {{ form.as_p }}
                 </table>
                 <button type="submit">Save changes</button>
-                <input type="button" value="Back" onclick="window.location='{% url 'chatbot_handler' %}'"/>
+                <input type="button" value="Cancel" style="margin-left:10px;" onclick="window.location='{% url 'chatbot_handler' %}'"/>
             </form>
             {% else %}
             <h4>
