--- a/templates/registration/registration.html
+++ b/templates/registration/registration.html
@@ -63,6 +63,12 @@
 
                 <div class="row">
                     <div class="col-sm-12">
+                        <input type="checkbox" id="admin-checkbox" name="checkbox" /> I need an admin account
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-sm-12">
                         <input type="submit" class="btn">
                     </div>
                 </div>
@@ -75,7 +81,8 @@
         <div class="col-sm-1 col-md-2 col-lg-3 hidden-xs-down spacer">
         </div>
         <div id="success-div" class="col-sm-6 col-xs-12">
-            <h2>Your account has been created</h2>
+            <div id="registration-message-container" class="button-shape" style="display:none;">
+            </div>
         </div>
         <div class="col-sm-1 col-md-2 col-lg-3 hidden-xs-down spacer">
         </div>
