Little typo change

--- a/templates/admin/add_intent.html
+++ b/templates/admin/add_intent.html
@@ -94,7 +94,7 @@
                         if(response.ERROR == false){
                             //successful login
                             $("#login-message-container").addClass("alert-success");
-                            $("#login-message-container").html("Succes");
+                            $("#login-message-container").html("Success");
                             $("#login-message-container").css("display", "inline-block");
                         }
                         else if(response.ERROR == true){
