Little typo change

--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -86,7 +86,7 @@
                                 isReset = true;
                                 deactivateSubmitButton();
                                 $("#reset-message-container").addClass("alert-success");
-                                $("#reset-message-container").html("Succes: you may log in <a href=\"/login\">here</a>");
+                                $("#reset-message-container").html("Success: you may log in <a href=\"/login\">here</a>");
                                 $("#reset-message-container").css("display", "inline-block");
                                 
                             }
