--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -87,7 +87,7 @@
                         if(response.ERROR == false){
                             //successful login
                             $("#login-message-container").addClass("alert-success");
-                            $("#login-message-container").html("Succes: click <a href=\"/chatbot\">here</a> if you are not automatically redirected");
+                            $("#login-message-container").html("Success: click <a href=\"/chatbot\">here</a> if you are not automatically redirected");
                             $("#login-message-container").css("display", "inline-block");
                             window.location.replace("/chatbot");
                         }
