--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -86,6 +86,7 @@
                                 isReset = true;
                                 deactivateSubmitButton();
                                 $("#reset-message-container").addClass("alert-success");
+                                $("#reset-message-container").removeClass("alert-danger");
                                 $("#reset-message-container").html("Succes: you may log in <a href=\"/login\">here</a>");
                                 $("#reset-message-container").css("display", "inline-block");
                                 
